new arreglos de la img btn

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
                     <input type="number" name="" id="precio-a" class="precios">
                 </div>
                 <figure>
-                    <img src="../../img/icon.png" alt="" class="intercambio-img">
+                    <img src="./icon.png" alt="" class="intercambio-img">
                 </figure>
                 <div class="seleccion-b seleccion">
                     <input type="number" name="" id="precio-b" class="precios">
