--- a/public/index.html
+++ b/public/index.html
@@ -16,19 +16,7 @@
             </div>
 
             <div class="divisas-container">
-                <!-- <select class="select-pais">
-                    <option value="" selected disabled>Selecione</option>
-                    <option value="">RD</option>
-                    <option value="">USA</option>
-                    <option value="">PR</option>
-                </select> -->
-
-                <!-- <select class="select-pais">
-                    <option value="" selected disabled>Selecione</option>
-                    <option value="">RD</option>
-                    <option value="">USA</option>
-                    <option value="">PR</option>
-                </select> -->
+                
             </div>
 
             <div class="precio-seleccionado">
@@ -44,7 +32,7 @@
             </div>
 
             <div class="boton">
-                <input type="submit" value="Result" class="btn">
+                <!-- <input type="submit" value="Result" class="btn"> -->
             </div>
         </form>
     </div>
